comitting locla changes, working sw3

--- a/Syscall_Injection/Syscall_Injection.vcxproj.filters
+++ b/Syscall_Injection/Syscall_Injection.vcxproj.filters
@@ -30,4 +30,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <MASM Include="Syswhispers3-asmx64.asm">
+      <Filter>Source Files</Filter>
+    </MASM>
+  </ItemGroup>
 </Project>
