--- a/Syscall_Injection/Syscall_Injection.vcxproj
+++ b/Syscall_Injection/Syscall_Injection.vcxproj
@@ -54,6 +54,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\masm.props" />
   </ImportGroup>
   <ImportGroup Label="Shared">
   </ImportGroup>
@@ -134,7 +135,13 @@
     <ClInclude Include="Syswhispers.h" />
     <ClInclude Include="typedef.h" />
   </ItemGroup>
+  <ItemGroup>
+    <MASM Include="Syswhispers3-asmx64.asm">
+      <FileType>Document</FileType>
+    </MASM>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\masm.targets" />
   </ImportGroup>
 </Project>
