added assembly file - setup for something functional at a later date hopefully

--- a/Syscall_Injection/Syscall_Injection.vcxproj
+++ b/Syscall_Injection/Syscall_Injection.vcxproj
@@ -136,6 +136,7 @@
     <ClInclude Include="typedef.h" />
   </ItemGroup>
   <ItemGroup>
+    <MASM Include="noah.asm" />
     <MASM Include="Syswhispers3-asmx64.asm">
       <FileType>Document</FileType>
     </MASM>
