its not working, but it is progress. We get the SSN in R10 and the return val of GetJMP in R11, the address in R11 may not be correct BUT IT IS THERE NOW

--- a/Syscall_Injection/Syscall_Injection.vcxproj
+++ b/Syscall_Injection/Syscall_Injection.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="Syswhispers.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="assembly.h" />
     <ClInclude Include="Syswhispers.h" />
     <ClInclude Include="typedef.h" />
   </ItemGroup>
