--- a/Syscall_Injection/Syscall_Injection.vcxproj.filters
+++ b/Syscall_Injection/Syscall_Injection.vcxproj.filters
@@ -29,6 +29,9 @@
     <ClInclude Include="typedef.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="assembly.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <MASM Include="Syswhispers3-asmx64.asm">
